samples/network-policies/online-boutique/checkoutservice-l4-rule.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "checkoutservice-l4-rule"
  namespace: web
spec:
  endpointSelector:
    matchLabels:
      app: checkoutservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: paymentservice
        - matchLabels:
            app: emailservice
        - matchLabels:
            app: shippingservice
        - matchLabels:
            app: currencyservice
        - matchLabels:
            app: productcatalogservice
        - matchLabels:
            app: cartservice
    - fromEndpoints:
        - matchLabels:
            app: frontend
      toPorts:
        - ports:
            - port: "5050"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 169.254.169.254/32
    - toFQDNs:
        - matchPattern: "*.googleapis.com"
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - toEndpoints:
        - matchLabels:
            app: frontend
    - toEndpoints:
        - matchLabels:
            app: paymentservice
      toPorts:
        - ports:
            - port: "50051"
    - toEndpoints:
        - matchLabels:
            app: emailservice
      toPorts:
        - ports:
            - port: "5000"
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            app: shippingservice
      toPorts:
        - ports:
            - port: "50051"
    - toEndpoints:
        - matchLabels:
            app: currencyservice
      toPorts:
        - ports:
            - port: "7000"
    - toEndpoints:
        - matchLabels:
            app: productcatalogservice
      toPorts:
        - ports:
            - port: "3550"
    - toEndpoints:
        - matchLabels:
            app: cartservice
      toPorts:
        - ports:
            - port: "7070"
